@@ -1,3 +1,14 @@
+2005-10-31  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/GtkNSSDialogs.cpp:
+	* embed/print-dialog.c:
+	* lib/Makefile.am:
+	* lib/ephy-dialog.c: (impl_construct):
+	R lib/ephy-glade.c:
+	R lib/ephy-glade.h:
+
+	Remove ephy-glade since we don't need autoconnect anymore.
+
 2005-10-30  Christian Persch  <chpe@cvs.gnome.org>
 
 	* data/glade/epiphany.glade:
